translation-tool/inputs/source_meta/objects/Common_ExponentialRetrySetting__mdt.object
<CustomObject>
    <description>Captures the base and exponent of each relationship with Retry Mechanism Object</description>
    <fields>
        <fullName>Base_Number__c</fullName>
        <label>Base Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exponential_Value__c</fullName>
        <label>Exponential Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exponential Retry Setting</label>
    <pluralLabel>Exponential Retry Settings</pluralLabel>
</CustomObject>